--- a/monthly.qmd
+++ b/monthly.qmd
@@ -9,7 +9,7 @@ format:
     number-sections: false
     code-tools: true
 date: last-modified
-code-fold: false
+code-fold: true
 code-overflow: scroll
 ---
 
@@ -18,21 +18,15 @@ code-overflow: scroll
 #| eval: true
 #| message: false
 #| warning: false
-
 source(here::here("R", "utils.R"))
 source(here::here("R", "monthly.R"))
-#source(here::here("reactable.css"))
-
 library(tidyverse)
 library(scalesextra)
-#library(ggiraph)
-#library(patchwork)
 library(reactable)
 library(reactablefmtr)
 library(htmltools)
-
-htmltools::tags$link(href = "https://fonts.googleapis.com/css?family=Karla:400,700|Fira+Mono&display=fallback", 
-                     rel = "stylesheet")
+library(ggiraph)
+library(patchwork)
 ```
 
 
@@ -104,7 +98,7 @@ reactable(deaths_mon_2,
                                  bias = 2.5),
                                  maxWidth = 85),
           columns = list(
-            #Year = colDef(footer = "AVG"),
+            Year = colDef(sticky = "left"),
             JAN = colDef(format = colFormat(separators = TRUE)),
             FEB = colDef(format = colFormat(separators = TRUE)),
             MAR = colDef(format = colFormat(separators = TRUE)),
@@ -145,11 +139,6 @@ reactable(deaths_yr_2,
           pagination = FALSE,
           compact = TRUE,
           defaultColDef = colDef(
-            # footer = function(values) {
-            #   if (!is.numeric(values)) return()
-            #   format(round(mean(values)), big.mark = ",")
-            #   },
-            # footerStyle = list(fontWeight = "bold"),
             format = colFormat(separators = TRUE),
             headerClass = "header", 
             align = "center", 
@@ -158,9 +147,8 @@ reactable(deaths_yr_2,
                                  span = TRUE,
                                  colors = temppal,
                                  bias = 2.5),
-                                 maxWidth = 85)
-          #columns = list(Month = colDef(footer = "AVG"))
-          ) |> 
+                                 maxWidth = 85),
+          columns = list(Year = colDef(sticky = "left"))) |> 
   add_title("Medicare Beneficiary Deaths by Year") |> 
   add_source("Source: Centers for Medicare & Medicaid Services.")
 ```
@@ -527,8 +515,6 @@ orig_ma_res_pct |>
 ```{r}
 #| message: false
 #| warning: false
-#| eval: false
-#| echo: false
 dat <- enroll_2 |> 
   dplyr::select(year,
                 residence = area_of_residence,
@@ -600,7 +586,7 @@ gg_advantage <- dat |>
          caption = "Source: Centers for Medicare & Medicaid Services. Plot by @aabrucehimni.")
 
 girafe(
-  code = print(gg_original / gg_advantage),
+  code = print(gg_original + gg_advantage),
   options = list(
     opts_hover(css = "stroke-width:4;"),
     opts_hover_inv(css = "opacity:0.1;"),
@@ -611,106 +597,4 @@ girafe(
   )
 ```
 
-
-```{r}
-#| message: false
-#| warning: false
-#| eval: false
-#| echo: false
-orig_ma <- enrollment |> 
-  dplyr::select(year, 
-                "Original" = original, 
-                "Advantage" = ma_other) |> 
-  tidyr::pivot_longer(!year, 
-                      names_to = "type", 
-                      values_to = "n") |> 
-  dplyr::mutate(year = as_date(parsedate::parse_date(year)))
-
-orig_ma_prop <- enrollment |> 
-  dplyr::select(year, 
-                "Original" = original_pct, 
-                "Advantage" = ma_other_pct) |> 
-  tidyr::pivot_longer(!year, 
-                      names_to = "type", 
-                      values_to = "pct")
-
-ggplot(orig_ma, aes(year, n, 
-                    fill = type, 
-                    label = type)) +
-  geom_stream(type = "ridge") +
-  geom_stream_label(size = 4, type = "ridge") + 
-  scale_x_date(date_breaks = "1 year",
-               date_labels = "%y", 
-               expand = c(0, 0)) +
-  ggthemes::theme_fivethirtyeight() +
-  theme(legend.position = "none")
-```
-
-
-
-```{css}
-.twitter-followers {
-  margin: 0 auto;
-  width: 575px;
-  font-family: Karla, "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-.followers-header {
-  margin: 1.125rem 0;
-  font-size: 1rem;
-}
-
-.followers-title {
-  font-size: 1.25rem;
-  font-weight: 600;
-}
-
-.followers-tbl {
-  font-size: 0.875rem;
-  line-height: 1.125rem;
-}
-
-.followers-tbl a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.followers-tbl a:hover,
-.followers-tbl a:focus {
-  text-decoration: underline;
-  text-decoration-thickness: max(1px, 0.0625rem);
-}
-
-.header {
-  border-bottom: 2px solid #555;
-  font-size: 0.8125rem;
-  font-weight: 400;
-  text-transform: uppercase;
-}
-
-.header:hover {
-  background-color: #eee;
-}
-
-.bar-cell {
-  display: flex;
-  align-items: center;
-}
-
-.number {
-  font-family: "Fira Mono", Consolas, Monaco, monospace;
-  font-size: 0.84375rem;
-  white-space: pre;
-}
-
-.bar-chart {
-  flex-grow: 1;
-  margin-left: 0.375rem;
-  height: 0.875rem;
-}
-
-.bar {
-  height: 100%;
-}
-```
 
